--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a href="https://www.youtube.com/@XacnDeveloper" class="link"><i class="fab fa-youtube"></i>Youtube</a>
         <a href="https://x.com/xacndeveloper" class="link"><i class="fab fa-twitter"></i>Twitter</a>
         <a href="https://t.me/XacnDeveloper" class="link"><i class="fab fa-telegram"></i>Telegram</a>
-        <a href="https://xacn.ct.ws" class="link"><i class="fas fa-globe"></i>Kişisel blog</a>
+        <a href="https://xacndeveloper.github.io" class="link"><i class="fas fa-globe"></i>Kişisel blog</a>
     </div>
     <footer>
         © 2025 Xacn Developer Tüm hakları saklıdır!
