--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="profile.png" alt="Profile Image" class="profile-image">
+        <img src="Picsart_25-02-10_15-53-51-177.png" alt="Profile Image" class="profile-image">
         <h1>Görkem Çalışkan</h1>
         <p>Web ve oyun modu tasarımcısı.</p>
         <a href="https://www.youtube.com/@XacnDeveloper" class="link"><i class="fab fa-youtube"></i>Youtube</a>
